--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="page clearfix" index>
     <div class="left">
-        <h1>Welcome to AI Blog!</h1>
+        <h1>Java后端技术栈博客</h1>
         <hr>
         <ul>
             {% for post in paginator.posts %}
